# aniduel

./: .gitignore  README.md  bot.py  launcher.py  pyproject.toml
cogs/: battles.py  dev.py  ipc.py
components/: battles.py  dev.py
models/: core.py
utils/: fmt.py
